// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.rowSelection fix expand on th left when selection column fixed on the left 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table dcloud-table-fixed-column dcloud-table-scroll-horizontal dcloud-table-has-fix-left"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
            style="overflow-x: auto; overflow-y: hidden;"
          >
            <table
              style="width: 903px; min-width: 100%; table-layout: fixed;"
            >
              <colgroup>
                <col
                  class="dcloud-table-expand-icon-col"
                />
                <col
                  class="dcloud-table-selection-col"
                />
              </colgroup>
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell dcloud-table-row-expand-icon-cell dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  />
                  <th
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <div
                      class="dcloud-table-selection"
                    >
                      <label
                        class="dcloud-checkbox-wrapper"
                      >
                        <span
                          class="dcloud-checkbox"
                        >
                          <input
                            class="dcloud-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="dcloud-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="dcloud-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="dcloud-table-measure-row"
                  style="height: 0px; font-size: 0px;"
                >
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-row-expand-icon-cell dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <button
                      aria-label="Expand row"
                      class="dcloud-table-row-expand-icon dcloud-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-row-expand-icon-cell dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <button
                      aria-label="Expand row"
                      class="dcloud-table-row-expand-icon dcloud-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-row-expand-icon-cell dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <button
                      aria-label="Expand row"
                      class="dcloud-table-row-expand-icon dcloud-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-row-expand-icon-cell dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <button
                      aria-label="Expand row"
                      class="dcloud-table-row-expand-icon dcloud-table-row-expand-icon-collapsed"
                      type="button"
                    />
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="dcloud-pagination dcloud-table-pagination dcloud-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="dcloud-pagination-next dcloud-pagination-disabled"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection fix selection column on the left 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table dcloud-table-fixed-column dcloud-table-scroll-horizontal dcloud-table-has-fix-left"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
            style="overflow-x: auto; overflow-y: hidden;"
          >
            <table
              style="width: 903px; min-width: 100%; table-layout: fixed;"
            >
              <colgroup>
                <col
                  class="dcloud-table-selection-col"
                />
              </colgroup>
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <div
                      class="dcloud-table-selection"
                    >
                      <label
                        class="dcloud-checkbox-wrapper"
                      >
                        <span
                          class="dcloud-checkbox"
                        >
                          <input
                            class="dcloud-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="dcloud-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="dcloud-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="dcloud-table-measure-row"
                  style="height: 0px; font-size: 0px;"
                >
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="dcloud-pagination dcloud-table-pagination dcloud-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="dcloud-pagination-next dcloud-pagination-disabled"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection fix selection column on the left when any other column is fixed 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table dcloud-table-fixed-column dcloud-table-scroll-horizontal dcloud-table-has-fix-left"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
            style="overflow-x: auto; overflow-y: hidden;"
          >
            <table
              style="width: 903px; min-width: 100%; table-layout: fixed;"
            >
              <colgroup>
                <col
                  class="dcloud-table-selection-col"
                />
              </colgroup>
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <div
                      class="dcloud-table-selection"
                    >
                      <label
                        class="dcloud-checkbox-wrapper"
                      >
                        <span
                          class="dcloud-checkbox"
                        >
                          <input
                            class="dcloud-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="dcloud-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="dcloud-table-cell dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last dcloud-table-cell-fix-left-all"
                    style="position: sticky; left: 0px;"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  aria-hidden="true"
                  class="dcloud-table-measure-row"
                  style="height: 0px; font-size: 0px;"
                >
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                  <td
                    style="padding: 0px; border: 0px; height: 0px;"
                  >
                    <div
                      style="height: 0px; overflow: hidden;"
                    >
                    </div>
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last dcloud-table-cell-fix-left-all"
                    style="position: sticky; left: 0px;"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last dcloud-table-cell-fix-left-all"
                    style="position: sticky; left: 0px;"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last dcloud-table-cell-fix-left-all"
                    style="position: sticky; left: 0px;"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column dcloud-table-cell-fix-left"
                    style="position: sticky; left: 0px;"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell dcloud-table-cell-fix-left dcloud-table-cell-fix-left-last dcloud-table-cell-fix-left-all"
                    style="position: sticky; left: 0px;"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="dcloud-pagination dcloud-table-pagination dcloud-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="dcloud-pagination-next dcloud-pagination-disabled"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection render with default selection correctly 1`] = `
<div
  class="dcloud-dropdown dcloud-slide-up-appear dcloud-slide-up-appear-prepare dcloud-slide-up"
  style="opacity: 0;"
>
  <ul
    class="dcloud-dropdown-menu dcloud-dropdown-menu-root dcloud-dropdown-menu-vertical dcloud-dropdown-menu-light"
    data-menu-list="true"
    role="menu"
    tabindex="0"
  >
    <li
      class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-all"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="dcloud-dropdown-menu-title-content"
      >
        Select all data
      </span>
    </li>
    <li
      class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-invert"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="dcloud-dropdown-menu-title-content"
      >
        Invert current page
      </span>
    </li>
    <li
      class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
      data-menu-id="rc-menu-uuid-test-none"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="dcloud-dropdown-menu-title-content"
      >
        Clear all data
      </span>
    </li>
  </ul>
  <div
    aria-hidden="true"
    style="display: none;"
  />
</div>
`;

exports[`Table.rowSelection should support getPopupContainer 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="dcloud-table-selection-col"
                />
              </colgroup>
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <div
                      class="dcloud-table-selection"
                    >
                      <label
                        class="dcloud-checkbox-wrapper"
                      >
                        <span
                          class="dcloud-checkbox"
                        >
                          <input
                            class="dcloud-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="dcloud-checkbox-inner"
                          />
                        </span>
                      </label>
                      <div
                        class="dcloud-table-selection-extra"
                      >
                        <span
                          class="dcloud-dropdown-trigger dcloud-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                          <div
                            style="position: absolute; top: 0px; left: 0px; width: 100%;"
                          />
                        </span>
                        <div>
                          <div
                            class="dcloud-dropdown dcloud-slide-up-appear dcloud-slide-up-appear-prepare dcloud-slide-up"
                            style="opacity: 0;"
                          >
                            <ul
                              class="dcloud-dropdown-menu dcloud-dropdown-menu-root dcloud-dropdown-menu-vertical dcloud-dropdown-menu-light"
                              data-menu-list="true"
                              role="menu"
                              tabindex="0"
                            >
                              <li
                                class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
                                data-menu-id="rc-menu-uuid-test-all"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="dcloud-dropdown-menu-title-content"
                                >
                                  Select all data
                                </span>
                              </li>
                              <li
                                class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
                                data-menu-id="rc-menu-uuid-test-invert"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="dcloud-dropdown-menu-title-content"
                                >
                                  Invert current page
                                </span>
                              </li>
                              <li
                                class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
                                data-menu-id="rc-menu-uuid-test-none"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="dcloud-dropdown-menu-title-content"
                                >
                                  Clear all data
                                </span>
                              </li>
                            </ul>
                            <div
                              aria-hidden="true"
                              style="display: none;"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="dcloud-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="dcloud-pagination dcloud-table-pagination dcloud-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="dcloud-pagination-next dcloud-pagination-disabled"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection should support getPopupContainer from ConfigProvider 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="dcloud-table-selection-col"
                />
              </colgroup>
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <div
                      class="dcloud-table-selection"
                    >
                      <label
                        class="dcloud-checkbox-wrapper"
                      >
                        <span
                          class="dcloud-checkbox"
                        >
                          <input
                            class="dcloud-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="dcloud-checkbox-inner"
                          />
                        </span>
                      </label>
                      <div
                        class="dcloud-table-selection-extra"
                      >
                        <span
                          class="dcloud-dropdown-trigger dcloud-dropdown-open"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <div>
                          <div
                            class="dcloud-dropdown dcloud-slide-up-appear dcloud-slide-up-appear-prepare dcloud-slide-up"
                            style="opacity: 0;"
                          >
                            <ul
                              class="dcloud-dropdown-menu dcloud-dropdown-menu-root dcloud-dropdown-menu-vertical dcloud-dropdown-menu-light"
                              data-menu-list="true"
                              role="menu"
                              tabindex="0"
                            >
                              <li
                                class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
                                data-menu-id="rc-menu-uuid-test-all"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="dcloud-dropdown-menu-title-content"
                                >
                                  Select all data
                                </span>
                              </li>
                              <li
                                class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
                                data-menu-id="rc-menu-uuid-test-invert"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="dcloud-dropdown-menu-title-content"
                                >
                                  Invert current page
                                </span>
                              </li>
                              <li
                                class="dcloud-dropdown-menu-item dcloud-dropdown-menu-item-only-child"
                                data-menu-id="rc-menu-uuid-test-none"
                                role="menuitem"
                                tabindex="-1"
                              >
                                <span
                                  class="dcloud-dropdown-menu-title-content"
                                >
                                  Clear all data
                                </span>
                              </li>
                            </ul>
                            <div
                              aria-hidden="true"
                              style="display: none;"
                            />
                          </div>
                        </div>
                        <div
                          style="position: absolute; top: 0px; left: 0px; width: 100%;"
                        />
                      </div>
                    </div>
                  </th>
                  <th
                    class="dcloud-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="dcloud-pagination dcloud-table-pagination dcloud-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="dcloud-pagination-next dcloud-pagination-disabled"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table.rowSelection use column as selection column when key is \`selection-column\` 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  class="dcloud-table-selection-col"
                />
              </colgroup>
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <div
                      class="dcloud-table-selection"
                    >
                      <label
                        class="dcloud-checkbox-wrapper"
                      >
                        <span
                          class="dcloud-checkbox"
                        >
                          <input
                            class="dcloud-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="dcloud-checkbox-inner"
                          />
                        </span>
                      </label>
                    </div>
                  </th>
                  <th
                    class="dcloud-table-cell"
                  >
                    Name
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell dcloud-table-selection-column"
                  >
                    <label
                      class="dcloud-checkbox-wrapper"
                    >
                      <span
                        class="dcloud-checkbox"
                      >
                        <input
                          class="dcloud-checkbox-input"
                          type="checkbox"
                          value=""
                        />
                        <span
                          class="dcloud-checkbox-inner"
                        />
                      </span>
                    </label>
                  </td>
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <ul
        class="dcloud-pagination dcloud-table-pagination dcloud-table-pagination-right"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="dcloud-pagination-prev dcloud-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="dcloud-pagination-item dcloud-pagination-item-1 dcloud-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="dcloud-pagination-next dcloud-pagination-disabled"
          title="Next Page"
        >
          <button
            class="dcloud-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
